; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/localedef/extr_collate.c_add_order_bit.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/localedef/extr_collate.c_add_order_bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32* }

@DIRECTIVE_UNDEF = common dso_local global i32 0, align 4
@DIRECTIVE_FORWARD = common dso_local global i32 0, align 4
@DIRECTIVE_BACKWARD = common dso_local global i32 0, align 4
@DIRECTIVE_POSITION = common dso_local global i32 0, align 4
@INTERR = common dso_local global i32 0, align 4
@collinfo = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @add_order_bit(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @DIRECTIVE_UNDEF, align 4
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* %2, align 4
  switch i32 %5, label %12 [
    i32 129, label %6
    i32 130, label %8
    i32 128, label %10
  ]

6:                                                ; preds = %1
  %7 = load i32, i32* @DIRECTIVE_FORWARD, align 4
  store i32 %7, i32* %3, align 4
  br label %14

8:                                                ; preds = %1
  %9 = load i32, i32* @DIRECTIVE_BACKWARD, align 4
  store i32 %9, i32* %3, align 4
  br label %14

10:                                               ; preds = %1
  %11 = load i32, i32* @DIRECTIVE_POSITION, align 4
  store i32 %11, i32* %3, align 4
  br label %14

12:                                               ; preds = %1
  %13 = load i32, i32* @INTERR, align 4
  br label %14

14:                                               ; preds = %12, %10, %8, %6
  %15 = load i32, i32* %3, align 4
  %16 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @collinfo, i32 0, i32 1), align 8
  %17 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @collinfo, i32 0, i32 0), align 8
  %18 = getelementptr inbounds i32, i32* %16, i64 %17
  %19 = load i32, i32* %18, align 4
  %20 = or i32 %19, %15
  store i32 %20, i32* %18, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
